<resources>
    <string name="app_name">FoodLovers</string>
    <string name="app_channel_id">@string/donottranslate_channel_id</string>
    <string name="app_google_maps_key">@string/donottranslate_google_maps_key</string>
    <string name="app_food_lovers_image">Food lovers image</string>
    <string name="app_navigation_activity">Navigation activity</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_comment">Comment</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_logout">Log out</string>
    <string name="action_take_image">Take image</string>
    <string name="action_choose_image">Choose image</string>
    <string name="action_change_username">Change Username</string>
    <string name="action_update_location">Update Location</string>
    <string name="action_add_recipe">Add recipe</string>
    <string name="general_error_delete">Error while deleting data. Please try again!</string>
    <string name="general_error_fields_required">Please check all fields</string>
    <string name="general_error_server">There was a problem with a server!</string>
    <string name="general_error_internet">Turn on internet before using this service</string>
    <string name="general_success_delete_entry">Entry successfully deleted!</string>
    <string name="general_error_permissions">Enable permissions in settings to use this option</string>
    <string name="general_error_location">Turn on the location</string>
    <string name="loading_please_wait">Loading.. please wait</string>
    <string name="screen_home">Home</string>
    <string name="screen_settings">Settings</string>
    <string name="screen_profile">Profile</string>
    <string name="screen_recipe">Recipe</string>
    <string name="email">Email</string>
    <string name="email_icon">Email icon</string>
    <string name="email_old">Old email</string>
    <string name="email_new">New email</string>
    <string name="email_change">Change Email</string>
    <string name="email_enter_to_reset">Enter an email connected with your profile</string>
    <string name="email_change_success">Email successfully changed!</string>
    <string name="email_change_server_error">There has been an error while changing your email!</string>
    <string name="email_change_field_error">Email already in use!</string>
    <string name="email_field_error">Check your e-mail format (ex. luka@mail.com)</string>
    <string name="email_same_as_old_field_error">Email same as the old one!</string>
    <string name="email_enter_new">Enter your new email</string>
    <string name="email_current_name">Current email:</string>
    <string name="email_logout_required">After successful email change you will be logged out</string>
    <string name="password">Password</string>
    <string name="password_reset">Reset password</string>
    <string name="password_forgot">Forgot password?</string>
    <string name="password_show">Show password</string>
    <string name="password_repeat">Repeat password</string>
    <string name="password_reset_success">Reset password link sent to your email</string>
    <string name="password_not_match_field_error">Invalid repeated password</string>
    <string name="password_field_error">Check password length &#91;6&#8211;16&#93;</string>
    <string name="password_confirm_new_email">Confirm new email with your password</string>
    <string name="username">Username</string>
    <string name="username_change_success">Successfully changed username</string>
    <string name="username_change_error">There has been an error while changing your username!</string>
    <string name="username_same_as_old_error">Username same as the old one</string>
    <string name="username_field_error">Check username length &#91;4&#8211;16&#93;</string>
    <string name="username_enter_new">Enter your new username</string>
    <string name="login_invalid_credentials_error">Invalid login credentials</string>
    <string name="login_remember_details">Remember your log-in details? <u>Login</u></string>
    <string name="login_go_back">Back to <u>Login</u></string>
    <string name="login_sign_up">Don\'t have an account? <u>Sign up</u></string>
    <string name="login_success">You\'ve been successfully logged in!</string>
    <string name="register_success">You\'ve been successfully registered!</string>
    <string name="register_fields_required_error">Invalid registration fields input!</string>
    <string name="welcome_screen_title">Explore new\ncooking recipes</string>
    <string name="welcome_screen_btn">Start cooking</string>
    <string name="welcome_screen_background_accessibility">Cooking app background</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="logout_message">You will need to authenticate again</string>
    <string name="logout_success">You have been logged out!</string>
    <string name="logout_dialog_title">Please login again</string>
    <string name="logout_dialog_action">Go to Login</string>
    <string name="location">Location</string>
    <string name="location_current_location">Current location</string>
    <string name="location_new_location">New location</string>
    <string name="location_last_known">Last known location</string>
    <string name="location_already_exist">New location is same as last known location!</string>
    <string name="location_change_success">Successfully changed location</string>
    <string name="location_change_error">There has been an error while changing your location!</string>
    <string name="location_permission_error">Location permission is required for this functionality</string>
    <string name="location_permission_question">Do you want to turn on the location?</string>
    <string name="location_settings_error">Please turn on location in settings!</string>
    <string name="location_settings_info">Turn location to update your current location</string>
    <string name="recipe_image">Recipe image</string>
    <string name="recipe_name">Name</string>
    <string name="recipe_title">Recipe title</string>
    <string name="recipe_difficulty_level">Difficulty level</string>
    <string name="recipe_food_type">Food Type</string>
    <string name="recipe_question_delete_edit">Do you want to delete or edit this recipe?</string>
    <string name="recipe_description">Description</string>
    <string name="recipe_salty">Salty</string>
    <string name="recipe_sweet">Sweet</string>
    <string name="recipe_select_food_type">Select Food Type</string>
    <string name="recipe_select_level">Select Level</string>
    <string name="recipe_total_recipes">%d total recipes</string>
    <string name="message_recipe_created">Successfully created recipe</string>
    <string name="message_recipe_not_created">Error while creating recipe</string>
    <string name="message_recipe_updated">Successfully updated recipe</string>
    <string name="message_recipe_not_updated">Error while updating recipe</string>
    <string name="message_create_recipe_image_placeholder">Image placeholder</string>
    <string name="option_all">All</string>
    <string name="image_change_success">Successfully changed an image</string>
    <string name="image_change_error">There has been an error while changing your image!</string>
    <string name="image_capture_permission_error">Storage and camera permissions are required for taking and saving an image!</string>
    <string name="image_storage_permission_error">Storage permissions are required for picking an image!</string>
    <string name="image_not_chosen">No image chosen</string>
    <string name="image_notification">FoodLovers notification</string>
    <string name="image_new_saved">Image saved in the gallery. Click here to check it!</string>
    <string name="image_user">User image</string>
    <string name="image_saved_image_notification">Saved image notification</string>
    <string name="image_click_to_change">Click here to add an image</string>
    <string name="nav_header">Navigation header</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="icon_navigate">Icon navigate</string>
    <string name="icon_email">Icon email</string>
    <string name="icon_profile">Icon profile</string>
    <string name="icon_image_capture">Icon capture image</string>
    <string name="icon_location">Icon location</string>
    <string name="icon_logout">Icon logout</string>
    <string name="yes">Yes</string>
    <string name="filter">Filter</string>
    <string name="search_something">Search for something</string>
    <string name="find_new_meals">Find new meals</string>
    <string name="new_recipes">New recipes</string>
    <string name="title_category">Category</string>
    <string name="title_categories">Categories</string>
    <string name="title_difficulty">Difficulty</string>
    <string name="title_preparation_time">Preparation time</string>
    <string name="title_sort_by">Sort by</string>
    <string name="title_discover_new_recipes">Discover new recipes</string>
    <string name="title_edit_recipe">Edit recipe</string>
    <string name="title_explore_new_recipes">Explore new \ncooking recipes</string>
    <string name="title_filters">Filters</string>
    <string name="title_find_new_recipes">Find new recipes</string>
    <string name="title_publish_new_recipes">Publish new recipe</string>
    <string name="title_recipes_this_week">Top 3 Recipes This Week</string>
    <string name="title_search_recipes">Search recipes</string>
    <string name="title_today_choice">Today\'s Choice</string>
    <string name="title_create_recipe_name">Name</string>
    <string name="title_create_recipe_name_placeholder">Recipe title</string>
    <string name="title_create_recipe_cooking_time">Cooking time</string>
    <string name="title_create_recipe_cooking_time_default">15min</string>
    <string name="title_create_recipe_number_of_portions">Number of portions</string>
    <string name="title_create_recipe_image">Image</string>
    <string name="title_create_recipe_ingredients">Ingredients</string>
    <string name="title_create_recipe_steps">Steps</string>
    <string name="option_create_recipe_add_ingredient">+ Add ingredient</string>
    <string name="option_create_recipe_add_step">Add step</string>
    <string name="btn_done">Done</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_create_recipe">Create</string>
    <string name="btn_edit_recipe">Edit</string>
    <string name="dialog_create_recipe_title">Create new recipe?</string>
    <string name="dialog_create_recipe_message">Please check your data before creating the recipe!</string>
    <string name="dialog_edit_recipe_title">Do you want to update recipe?</string>
    <string name="dialog_edit_recipe_message">Please check your data before updating the recipe!</string>
    <string name="dialog_btn_confirm">Confirm</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_recipes">Recipes</string>
    <string name="navigation_favorites">Favorites</string>
    <string name="navigation_profile">Profile</string>
    <string name="btn_add_recipe_accessibility">Add recipe button</string>
    <string name="btn_decrement_accessibility">Decrement button</string>
    <string name="btn_filter_accessibility">Filter button</string>
    <string name="btn_increment_accessibility">Increment button</string>
    <string name="iv_favorite_recipe_accessibility">Favorite recipe icon</string>
    <string name="iv_info_metrics_accessibility">Metrics info</string>
    <string name="iv_recipe_accessibility">Recipe image</string>
</resources>