<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app_account.view.AccountFragment">

    <data
        android:layout_width="162dp"
        android:layout_height="76dp">

        <variable
            name="viewmodel"
            type="ht.ferit.fjjukic.foodlovers.app_recipe.view_model.EditRecipeViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/recipe_background">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="serif"
                android:text="@string/screen_recipe"
                android:textAlignment="center"
                android:textColor="@color/color_black"
                android:textStyle="italic"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="serif"
                android:text="@string/recipe_name"
                android:textAlignment="viewStart"
                android:textColor="@color/color_black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="serif"
                android:hint="@string/recipe_name"
                android:importantForAutofill="no"
                android:inputType="text|textCapSentences"
                android:padding="15dp"
                android:text="@={viewmodel.recipe.title}"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/recipe_description"
                android:textAlignment="viewStart"
                android:textColor="@color/color_black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="serif"
                android:hint="@string/recipe_description"
                android:importantForAutofill="no"
                android:inputType="text|textMultiLine|textCapSentences"
                android:padding="15dp"
                android:text="@={viewmodel.recipe.description}"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="serif"
                android:text="@string/recipe_difficulty_level"
                android:textAlignment="viewStart"
                android:textColor="@color/color_black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btnDifficultyLevelMenu"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/color_select_menu"
                android:fontFamily="serif"
                android:hint="@string/recipe_select_level"
                android:importantForAutofill="no"
                android:padding="15dp"
                android:textSize="15sp"
                android:textStyle="italic" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="serif"
                android:text="@string/recipe_food_type"
                android:textAlignment="viewStart"
                android:textColor="@color/color_black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btnFoodTypeMenu"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/color_select_menu"
                android:fontFamily="serif"
                android:hint="@string/recipe_select_food_type"
                android:importantForAutofill="no"
                android:padding="15dp"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="serif"
                android:text="@string/recipe_image"
                android:textAlignment="viewStart"
                android:textColor="@color/color_black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btn_choose_image"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/color_select_menu"
                android:fontFamily="serif"
                android:importantForAutofill="no"
                android:padding="15dp"
                android:text="@string/action_choose_image"
                android:textSize="15sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/recipe_image" />

            <Button
                android:id="@+id/btn_action"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/btn_rounded_enabled"
                android:fontFamily="serif"
                android:textStyle="italic"
                android:onClick="@{() -> viewmodel.modifyRecipe()}"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</layout>