<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_welcome_screen_background">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:elevation="2dp"
            android:fontFamily="@font/playfair_display_bold"
            android:gravity="center_horizontal"
            android:text="@string/welcome_screen_title"
            android:textColor="@color/color_splash_title"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:contentDescription="@string/welcome_screen_background_accessibility"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_background" />

        <Button
            android:id="@+id/btn_start_cooking"
            android:layout_width="180dp"
            android:layout_height="56dp"
            android:background="@drawable/rounded_btn_state"
            android:fontFamily="@font/playfair_display_medium"
            android:paddingBottom="5dp"
            android:text="@string/welcome_screen_btn"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>